Fixed spacing of baselined elements.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,8 +2,6 @@
 	font-family: @sans-serif;
 	font-size: @base-font-size;
 	line-height: @base-line-height;
-	padding-bottom: 0;
-	margin: 0;
 }
 
 .baseline( @font-size, @font-family: sans-serif ) when( @font-size > @base-font-size ) {
@@ -21,13 +19,16 @@
 
 .baseline-position( @bottom, @top ) when( @top < 0 ) {
 	margin-top: @top;
-	padding: 0 0 (@bottom - @base-line-height);
+	padding-bottom: @bottom - @base-line-height;
+	padding-top: 0;
 }
 
 .baseline-position( @bottom, @top ) when( @top = 0 ) {
-	padding: @top 0 0;
+	padding-bottom: 0;
+	padding-top: @top;
 }
 
 .baseline-position( @bottom, @top ) when( @top > 0 ) {
-	padding: @top 0 @bottom;
+	padding-bottom: @bottom;
+	padding-top: @top;
 }
